--- a/src/assets/styles/themecolors.scss
+++ b/src/assets/styles/themecolors.scss
@@ -1,6 +1,6 @@
 $orange: #E54A28;
 $lighterblue: #124E86;
-$darkerblue: #000A19;
+$darkerblue: #010f24;
 $purple: #84536F;
 $white: #FEFEFE;
 $red: #DC3A2F;
